# C-Compiler

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  XDG_SESSION_ID=c2  dt10_c_translator_formative.sh  makefile  mips_test.sh  readme.md  std::cout  test_c_translate.sh  test_deliverable.sh  test_mips_compile.sh  test_print.sh  test_py_mips_compile.sh  test_py_translate_formative.sh
include/: ast.hpp
include/ast/: ast_declarations.hpp  ast_expressions.hpp  ast_node.hpp  ast_program.hpp  ast_statements.hpp
include/codegen/: context.hpp
labcode/1-regexes/: histogram.hpp  histogram_lexer.flex  histogram_main.cpp
labcode/1-regexes/test/in/: 12.txt
labcode/1-regexes/test/ref/: 12.stdout.txt
labcode/2-parsers/include/ast/: ast_expression.hpp  ast_functions.hpp  ast_operators.hpp  ast_primitives.hpp
labcode/2-parsers/src/: maths_lexer.flex  maths_lexer.yy.cpp  maths_parser.output  maths_parser.tab.cpp  maths_parser.y
management/: diary.md  effort-log.csv  milestones.csv  schedule.csv
mips_analysis/: T001_return.c  T001_return.s  T002_return5.c  T002_return5.s  T003_returnadd.s  T004_returnsub.s  T005_returnmult.s  f.s  f1.c  f1.s  f2.c  f2.s  fc.c  fc.s  fexpr.c  fexpr.s  testbig.c  testbig.s
mips_analysis/address/: f1.c  f1.s
mips_analysis/array/: ag.s  al.s  arrayglobal.c  arraylocal.c
mips_analysis/fcall/: a.s  f0.c  f0.s  f00.c  f00.s  f010.c  f010.s  f08.c  f08.s  f1.c  f1.s  f10.c  f10.s  f2.c  f2.s  f4.c  f4.s  f42.c  f42.s  ifs.c  ifs.s  return0.s
mips_analysis/for/: for.s  forloop.c
mips_analysis/funcdef/: f1.c  f1.s  f2.c  f2.s
mips_analysis/function_arg/: arg0.c  arg0.s  arg1.c  arg1.s  arg2.c  arg2.s  arg3.c  arg3.s  arg4.c  arg4.s  arg5.c  arg5.s
mips_analysis/globals/: gb.c  gb.s  gb2.c  gb2.s  gb22.c  gb3.c  gb3.s  gb4.c  gb4.s  global1  global1.c  global1.s  global2.c  global2.s
mips_analysis/ifelse/: ifelse  ifelse.c  ifelse.s
mips_analysis/main/: a  main  main.s  main1.c  out.s
mips_analysis/numtypes/: a.out  negnum1.c
mips_analysis/paramdec/: param0.c  param0.s  param1.c  param1.s  param2.c  param2.s  param4.c  param4.s  paramarg.c  paramarg.s
mips_analysis/while/: dowhile.s  while.c  while.s
src/: c_compiler.cpp  codegen.cpp  lexer.flex  lexer.yy.cpp  parser.output  parser.tab.cpp  parser.tab.hpp  parser.y  print.cpp
src/ast/: ast_declarations.cpp  ast_expressions.cpp  ast_node.cpp  ast_statements.cpp
src/codegen/: context.cpp
src/lexer/: lexer.flex
src/parser/: parser.y
test/c_translate/in/: T0001_lonedec.txt  T0006_return.txt
test/c_translate/ref/: T0001_lonedec.stdout.txt  T0002_lonedec2.stdout.txt  T0006_return.stdout.txt  T0013_statlistinfunc.stdout.txt  T0015_multfuncparam.stdout.txt
test/in/: T0002_lonedec2.txt  T0003_vardec.txt  T0004_emptyfunc.txt  T0005_emptyfuncscope.txt  T0007_returnnum.txt  T0008_returnvar.txt  T0009_initdec.txt  T0010_decinfunc.txt  T0011_declistinfunc.txt  T0012_decstatinfunc.txt  T0013_statlistinfunc.txt  T0014_funcparam.txt  T0016_multadderror.txt
test/mips_test/: ref_compiler.sh
test/mips_test/output/: T001_return.elf  T001_return.s  T002_returnadds.elf  T002_returnadds.s  T003_returnsub.elf  T003_returnsub.s  T004_returnsubadd.elf  T004_returnsubadd.s  T005_returnmult.elf  T005_returnmult.s  T006_returnmixmultsubadd.elf  T006_returnmixmultsubadd.s  T007_returnmixparen.elf  T007_returnmixparen.s  T008_returnequals.elf  T008_returnequals.s
test/mips_test/testin/: T001_return.c  T002_returnadds.c  T002_returnadds_driver.c  T003_returnadd.c  T003_returnsub.c  T004_returnsub.c  T004_returnsubadd.c  T004_returnsubadd_driver.c  T005_returnmult.c  T006_returnmixmultsubadd.c  T006_returnmixmultsubadd_driver.c  T007_returnmixparen.c  T007_returnmixparen_driver.c  T008_returnequals.c  T008_returnequalsn.c  T009_returndiv.c  T010_returndivadd.c  T010_returndivadd_driver.c  T011_returnmod.c  T012_returnmod2.c  T012_returnmod2_driver.c  T013_returnsll.c  T013_returnsll_driver.c  T013_returnslr.c  T014_returnexor.c  T014_returnexor_driver.c  T015_returneor.c  T016_returnand.c  T016_returnand_driver.c  T017_returnnoteq.c  T018_returnnoteq2.c  T019_returngreaterthan.c  T020_returngreaterthan2.c  T020_returngreaterthan2_driver.c  T021_returnlessthan.c  T021_returnlessthan_driver.c  T022_returnlessthan2.c  T023_returnmixer1.c  T023_returnmixer1_driver.c  T024_returnlteq.c  (+80 more)
test/py_mips_test/outputs/: f00  f00-compile.csv  f00-translate.csv  f00.py  f01  f01-compile.csv  f01-translate.csv  f01.py  f02  f02-compile.csv  f02-translate.csv  f02.py  f03  f03-compile.csv  f03-translate.csv  f03.py  f04  f04-compile.csv  f04-translate.csv  f04.py  f05  f05-compile.csv  f05-translate.csv  f05.py  f06  f06-compile.csv  f06-translate.csv  f06.py  f07  f07-compile.csv  f07-translate.csv  f07.py  f08  f08-compile.csv  f08-translate.csv  f08.py  f09  f09-compile.csv  f09-translate.csv  f09.py  (+36 more)
test/ref/: T0003_vardec.stdout.txt  T0004_emptyfunc.stdout.txt  T0005_emptyfuncscope.stdout.txt  T0007_returnnum.stdout.txt  T0008_returnvar.stdout.txt  T0010_decinfunc.stdout.txt  T0011_declistinfunc.stdout.txt  T0012_decstatinfunc.stdout.txt  T0013_statlistinfunc.stdout.txt  T0014_funcparam.stdout.txt  T001_extdec.stdout.txt
test_deliverable/output/: FOR_N.elf  FOR_N.s  GLOBAL.elf  GLOBAL.s  IF_ELSE_F.elf  IF_ELSE_F.s  IF_ELSE_T.elf  IF_ELSE_T.s  IF_F.elf  IF_F.s  IF_T.elf  IF_T.s  LOCAL_ARRAY.elf  LOCAL_ARRAY.s  MAIN.elf  MAIN.s  SELF_RECURSION.elf  SELF_RECURSION.s
test_deliverable/test_cases/: ATOF.c  ATOF_driver.c  FOR_N.c  FOR_N_driver.c  GLOBAL.c  GLOBAL_driver.c  IF_ELSE_F.c  IF_ELSE_F_driver.c  IF_ELSE_T.c  IF_ELSE_T_driver.c  IF_F.c  IF_F_driver.c  IF_T.c  IF_T_driver.c  LOCAL_ARRAY.c  SELF_RECURSION.c  SELF_RECURSION_driver.c
test_mips/testcases/: T001_return_driver.c  T001_return_driver.s
testpy/in/: T002_extdec.c
working/: *_driver.compile.stderr  T001_return.link.stderr  T001_return.s
