cmake_minimum_required(VERSION 3.9)
project(langproc_2017_cw_anc)

set(CMAKE_CXX_STANDARD 11)

add_executable(langproc_2017_cw_anc
        include/ast/ast_declarations.hpp
        include/ast/ast_expressions.hpp
        include/ast/ast_node.hpp
        include/ast/ast_statements.hpp
        include/codegen/context.hpp
        include/ast.hpp
        labcode/1-regexes/histogram.hpp
        labcode/1-regexes/histogram_main.cpp
        labcode/2-parsers/include/ast/ast_expression.hpp
        labcode/2-parsers/include/ast/ast_functions.hpp
        labcode/2-parsers/include/ast/ast_operators.hpp
        labcode/2-parsers/include/ast/ast_primitives.hpp
        labcode/2-parsers/include/ast.hpp
        labcode/2-parsers/src/eval_expr.cpp
        labcode/2-parsers/src/maths_lexer.yy.cpp
        labcode/2-parsers/src/maths_parser.tab.cpp
        labcode/2-parsers/src/maths_parser.tab.hpp
        labcode/2-parsers/src/print_canonical.cpp
        mips_analysis/function_arg/arg0.c
        mips_analysis/function_arg/arg1.c
        mips_analysis/function_arg/arg2.c
        mips_analysis/function_arg/arg3.c
        mips_analysis/function_arg/arg4.c
        mips_analysis/function_arg/arg5.c
        mips_analysis/paramdec/param0.c
        mips_analysis/paramdec/param1.c
        mips_analysis/paramdec/param2.c
        mips_analysis/paramdec/param4.c
        mips_analysis/paramdec/paramarg.c
        mips_analysis/f.c
        mips_analysis/f1.c
        mips_analysis/f2.c
        mips_analysis/fc.c
        mips_analysis/fexpr.c
        mips_analysis/T001_return.c
        mips_analysis/T002_return5.c
        mips_analysis/T003_returnadd.c
        mips_analysis/T004_returnsub.c
        mips_analysis/T005_returnmult.c
        mips_analysis/testbig.c
        src/ast/ast_declarations.cpp
        src/ast/ast_expressions.cpp
        src/ast/ast_node.cpp
        src/ast/ast_statements.cpp
        src/c_compiler.cpp
        src/lexer.flex
        src/parser.y
        test/c_translate/in/T0001_lonedec.txt
        test/c_translate/in/T0002_lonedec2.txt
        test/c_translate/in/T0003_vardec.txt
        test/c_translate/in/T0004_emptyfunc.txt
        test/c_translate/in/T0005_emptyfuncscope.txt
        test/c_translate/in/T0006_return.txt
        test/c_translate/in/T0007_returnnum.txt
        test/c_translate/in/T0008_returnvar.txt
        test/c_translate/in/T0009_initdec.txt
        test/c_translate/in/T0010_decinfunc.txt
        test/c_translate/in/T0011_declistinfunc.txt
        test/c_translate/in/T0012_decstatinfunc.txt
        test/c_translate/in/T0013_statlistinfunc.txt
        test/c_translate/in/T0014_funcparam.txt
        test/c_translate/in/T0015_multfuncparam.txt
        test/c_translate/in/T0016_multadderror.txt
        test/c_translate/out/T0001_lonedec.diff.txt
        test/c_translate/out/T0001_lonedec.stderr.txt
        test/c_translate/out/T0001_lonedec.stdout.txt
        test/c_translate/out/T0002_lonedec2.diff.txt
        test/c_translate/out/T0002_lonedec2.stderr.txt
        test/c_translate/out/T0002_lonedec2.stdout.txt
        test/c_translate/out/T0003_vardec.diff.txt
        test/c_translate/out/T0003_vardec.stderr.txt
        test/c_translate/out/T0003_vardec.stdout.txt
        test/c_translate/out/T0004_emptyfunc.diff.txt
        test/c_translate/out/T0004_emptyfunc.stderr.txt
        test/c_translate/out/T0004_emptyfunc.stdout.txt
        test/c_translate/out/T0005_emptyfuncscope.diff.txt
        test/c_translate/out/T0005_emptyfuncscope.stderr.txt
        test/c_translate/out/T0005_emptyfuncscope.stdout.txt
        test/c_translate/out/T0006_return.diff.txt
        test/c_translate/out/T0006_return.stderr.txt
        test/c_translate/out/T0006_return.stdout.txt
        test/c_translate/out/T0007_returnnum.diff.txt
        test/c_translate/out/T0007_returnnum.stderr.txt
        test/c_translate/out/T0007_returnnum.stdout.txt
        test/c_translate/out/T0008_returnvar.diff.txt
        test/c_translate/out/T0008_returnvar.stderr.txt
        test/c_translate/out/T0008_returnvar.stdout.txt
        test/c_translate/out/T0009_initdec.diff.txt
        test/c_translate/out/T0009_initdec.stderr.txt
        test/c_translate/out/T0009_initdec.stdout.txt
        test/c_translate/out/T0010_decinfunc.diff.txt
        test/c_translate/out/T0010_decinfunc.stderr.txt
        test/c_translate/out/T0010_decinfunc.stdout.txt
        test/c_translate/out/T0011_declistinfunc.diff.txt
        test/c_translate/out/T0011_declistinfunc.stderr.txt
        test/c_translate/out/T0011_declistinfunc.stdout.txt
        test/c_translate/out/T0011_multdecinfunc.diff.txt
        test/c_translate/out/T0011_multdecinfunc.stderr.txt
        test/c_translate/out/T0011_multdecinfunc.stdout.txt
        test/c_translate/out/T0011_statdecinfunc.diff.txt
        test/c_translate/out/T0011_statdecinfunc.stderr.txt
        test/c_translate/out/T0011_statdecinfunc.stdout.txt
        test/c_translate/out/T0012_decstatinfunc.diff.txt
        test/c_translate/out/T0012_decstatinfunc.stderr.txt
        test/c_translate/out/T0012_decstatinfunc.stdout.diff.txt
        test/c_translate/out/T0012_decstatinfunc.stdout.stderr.txt
        test/c_translate/out/T0012_decstatinfunc.stdout.stdout.txt
        test/c_translate/out/T0012_decstatinfunc.stdout.txt
        test/c_translate/out/T0013_statlistinfunc.diff.txt
        test/c_translate/out/T0013_statlistinfunc.stderr.txt
        test/c_translate/out/T0013_statlistinfunc.stdout.txt
        test/c_translate/out/T0014_funcparam.diff.txt
        test/c_translate/out/T0014_funcparam.stderr.txt
        test/c_translate/out/T0014_funcparam.stdout.txt
        test/c_translate/out/T0015_multfuncparam.diff.txt
        test/c_translate/out/T0015_multfuncparam.stderr.txt
        test/c_translate/out/T0015_multfuncparam.stdout.txt
        test/c_translate/out/T0016_multadderror.diff.txt
        test/c_translate/out/T0016_multadderror.stderr.txt
        test/c_translate/out/T0016_multadderror.stdout.txt
        test/c_translate/ref/T0001_lonedec.stdout.txt
        test/c_translate/ref/T0002_lonedec2.stdout.txt
        test/c_translate/ref/T0003_vardec.stdout.txt
        test/c_translate/ref/T0004_emptyfunc.stdout.txt
        test/c_translate/ref/T0005_emptyfuncscope.stdout.txt
        test/c_translate/ref/T0006_return.stdout.txt
        test/c_translate/ref/T0007_returnnum.stdout.txt
        test/c_translate/ref/T0008_returnvar.stdout.txt
        test/c_translate/ref/T0009_initdec.stdout.txt
        test/c_translate/ref/T0010_decinfunc.stdout.txt
        test/c_translate/ref/T0011_declistinfunc.stdout.txt
        test/c_translate/ref/T0012_decstatinfunc.stdout.txt
        test/c_translate/ref/T0013_statlistinfunc.stdout.txt
        test/c_translate/ref/T0014_funcparam.stdout.txt
        test/c_translate/ref/T0015_multfuncparam.stdout.txt
        test/mips_test/testin/T001_return.c
        test/mips_test/testin/T001_return_driver.c
        test/mips_test/testin/T002_return5.c
        test/mips_test/testin/T003_returnadd.c
        test/mips_test/testin/T004_returnsub.c
        test/mips_test/testin/T005_returnmult.c
        test/py_mips_test/inputs/f00.c
        test/py_mips_test/inputs/f01.c
        test/py_mips_test/inputs/f02.c
        test/py_mips_test/inputs/f03.c
        test/py_mips_test/inputs/f04.c
        test/py_mips_test/inputs/f05.c
        test/py_mips_test/inputs/f06.c
        test/py_mips_test/inputs/f07.c
        test/py_mips_test/inputs/f08.c
        test/py_mips_test/inputs/f09.c
        test/py_mips_test/inputs/f10.c
        test/py_mips_test/inputs/f11.c
        test/py_mips_test/inputs/f12.c
        test/py_mips_test/inputs/f13.c
        test/py_mips_test/inputs/f14.c
        test/py_mips_test/inputs/f15.c
        test/py_mips_test/inputs/f16.c
        test/py_mips_test/inputs/f17.c
        test/py_translate/formative/f0.c
        test/py_translate/formative/f1.c
        test/py_translate/formative/f2.c
        test/py_translate/formative/f3.c
        test/py_translate/formative/f4.c
        test/py_translate/formative/f5.c
        test/py_translate/formative/f6.c
        test/py_translate/formative/f7.c
        test/py_translate/formative/f8.c
        test/py_translate/formative/f9.c
        test_deliverable/test_cases/ATOF.c
        test_deliverable/test_cases/FOR_N.c
        test_deliverable/test_cases/GLOBAL.c
        test_deliverable/test_cases/IF_ELSE_F.c
        test_deliverable/test_cases/IF_ELSE_T.c
        test_deliverable/test_cases/IF_F.c
        test_deliverable/test_cases/IF_T.c
        test_deliverable/test_cases/LOCAL_ARRAY.c
        test_deliverable/test_cases/MAIN.c
        test_deliverable/test_cases/SELF_RECURSION.c
        makefile
        test_c_translate.sh
        test_mips_compile.sh
        test_py_mips_compile.sh
        test_py_translate_formative.sh)
